[gd_scene load_steps=3 format=3 uid="uid://ccelestqr2bns"]

[ext_resource type="Script" path="res://hud.gd" id="1_g21ws"]
[ext_resource type="FontFile" uid="uid://obg2py2apxig" path="res://assets/Orange Kid.otf" id="2_hqpr8"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_g21ws")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_hqpr8")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -79.5
offset_right = 300.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hqpr8")
theme_override_font_sizes/font_size = 64
text = "Some Message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_hqpr8")
theme_override_font_sizes/font_size = 64
text = "Start
"
